# toast

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
roles/helloworld/tasks/: main.yml
roles/nginx/defaults/: main.yml
roles/nginx/tasks/: main.yml
roles/nginx/templates/: subdomain.conf.jinja2
toast/: __init__.py  action.py  ansible.py  config.py  github.py  server.py  webhook.py
toast/data/roles/nginx/defaults/: main.yml
toast/data/roles/nginx/tasks/: main.yml  subdomain.yml  subpath.yml
toast/data/roles/nginx/templates/: subdomain.conf.jinja2  subpath.conf.jinja2
toast/data/roles/systemd/defaults/: main.yml
toast/data/roles/systemd/tasks/: main.yaml
toast/data/roles/systemd/templates/: unit.service.jinja2
