[metadata]
name = toast
version = 0.0.1

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
install_requires = 
    flask
    toml
    gunicorn
    pygit2
    ansible-runner
    # ansible-core

[options.entry_points]
console_scripts = 
    toast = toast:run_server